--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ pre {
 	<div class="main">
 		<div class="item-wrapper">
 			<div class="item center">
-				<p class="reveal">This tutorial will walk you thru the steps to creating a digital measure based upon the Advisory Committee on Immunization Practices (ACIP) influenza vaccine recommendations for 2021-22 on the <a href="https://www.cdc.gov/flu/professionals/acip/summary/summary-recommendations.htm">CDC website</a>. We will be using CQL and FHIR with CMS' <a href="https://www.emeasuretool.cms.gov/">Measure Authoring Tool (MAT)</a>.</p>
+				<p class="reveal">This tutorial will walk you thru the steps to creating a digital measure using CQL and FHIR with CMS' <a href="https://www.emeasuretool.cms.gov/">Measure Authoring Tool (MAT)</a>. The measure will be based upon the Advisory Committee on Immunization Practices (ACIP) influenza vaccine recommendations for 2021-22 on the <a href="https://www.cdc.gov/flu/professionals/acip/summary/summary-recommendations.htm">CDC website</a>.</p>
 			</div>
 		</div>
 	</div>
