--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ pre {
 		<div class="item-wrapper">
 			<div class="item">
 				<p class="reveal">The first step is creating a new measure in the measure library. You will need to define a name for your measure, the data model (i.e., FHIR or QDM), a library name that will be created for your measure, and an abbreviated title. You will also need to specify whether higher or lower scores are better and if the measure is patient-based.</p>
-				<p>Once your measure has been created, it will take you to the measure details section in the measure composer. This section allows you to provide a lot of useful information for those that will be using your measure. The information that you already entered will already be populated but there are a few additional details that you will need to enter before you can go any further. These include the measure steward, a brief description of the measure, and the measure type (e.g., structure, process, outcome). Of course, there is a lot more that you can do in this section but will not go into much detail.</p>
+				<p>Once your measure has been created, it will take you to the measure details section in the measure composer. This section allows you to provide a lot of useful information for those that will be using your measure. The information that you entered will already be populated but there are a few additional details that you will need to enter before you can go any further. These include the measure steward, a brief description of the measure, and the measure type (e.g., structure, process, outcome). Of course, there is a lot more that you can do in this section but will not go into much detail.</p>
 				<p>Now that we've setup our measure, we can get to work in the CQL workspace.</p>
 			</div>
 		</div>
@@ -248,7 +248,7 @@ pre {
 		<div class="item-wrapper">
 			<div class="item">
 				<h2 class="large reveal">Includes</h2>
-				<p class="reveal">This section allows you to search for and add existing libraries to your code. You can create your own libaries to reuse your value sets, codes, functions, etc. across measures.</p>
+				<p class="reveal">This section allows you to search for and add existing libraries to your code. You can create your own libaries to reuse value sets, codes, functions, etc. across measures.</p>
 				<p class="reveal">Unfortunately, I don't know that there is any easy way to view all of the libraries available. It will not allow you to search for any empty string. However, it does appear to be convention to include FHIR in the library name.</p>
 				<p class="reveal">By selecting a value set from the available libraries, defining the alias, and hitting save, the tool will add some code with the following syntax:</p>
 				<pre class="reveal"><code><span class="keyword">include</span> <span class="quote madlib">Library Name</span> <span class="keyword">version</span> <span class="quote madlib">'X.X.XXX'</span> <span class="keyword">called</span> <span class="quote madlib">Alias</span></code></pre>
@@ -297,8 +297,8 @@ pre {
 		<div class="item-wrapper">
 			<div class="item">
 				<h2 class="large reveal">Codes</h2>
-				<p class="reveal">This section allows you to reference specific codes from various terminologies in your code. You need to sign into UMLS using an API key to add a value set to your code. You can sign in using the link at the top of the page. And, they provide simple instructions to find your API key if you don't already have it.</p>
-				<p class="reveal">To add a code to your code, you first need to find the OID from the VSAC. Then, you enter that into the search form and retrieve the value set. The value set is not added to your code until you select apply. The tool will then add some code with the following syntax:</p>
+				<p class="reveal">This section allows you to reference specific codes from various terminologies. You need to sign into UMLS using an API key to add a value set to your code. You can sign in using the link at the top of the page. And, they provide simple instructions to find your API key if you don't already have it.</p>
+				<p class="reveal">To add a code, you first need to find the OID from the VSAC. Then, you enter that into the search form and retrieve the value set. The value set is not added to your code until you select apply. The tool will then add some code with the following syntax:</p>
 				<pre class="reveal"><code><span class="keyword">codesystem</span> <span class="quote madlib">"Code System"</span>: <span class="quote madlib">'URL'</span>
 <span class="keyword">code</span> <span class="quote madlib">"Code Set Name"</span><span class="punct">:</span> <span class="quote madlib">'Code'</span> <span class="keyword">from</span> <span class="quote madlib">"Code System"</span> <span class="keyword">display</span> <span class="quote madlib">'Display'</span></code></pre>
 				<p class="reveal"><i>Note that not all code systems are in VSAC yet.</i></p>
@@ -329,8 +329,8 @@ pre {
 				<p class="reveal">This section allows you to provide the code with parameters to be used in your code and the measurement period is added by default. Parameters follow the following syntax:</p>
 				<pre class="reveal"><code><span class="keyword">parameter</span> <span class="quote madlib">"Parameter Name"</span> <span class="keyword madlib">Data Type</span> [<span class="keyword">default</span> <span class="madlib">Default Value</span>]</code></pre>	
 				<p class="reveal"><i>Note that Bonnie only allows the measure period as a parameter.</i></p>
-				<p class="reveal">This is the measurement period added by default.</p>
 				<pre class="reveal"><code><span class="keyword">parameter</span> <span class="quote">"Measurement Period"</span> <span class="keyword">Interval&lt;DateTime&gt;</span></code></pre>
+				<p class="reveal">This is the measurement period added by default.</p>
 		  </div>
 		</div>	
       </div>
@@ -342,13 +342,13 @@ pre {
 			<div class="item">
 				<h2 class="large reveal">Functions</h2>
 				<p class="reveal">I've skipped over the Definitions section for now. With a function, you provide one or more inputs and get an output. This is a way to simplify your code if you need to perform the same calculation again and again.</p>
-				<p class="reveal">To create a function, you need to create an alias and add your parameters. For each parameter, you need to select a data type. Then, you add your CQL code in the CQL Expression Editor below.</p>
+				<p class="reveal">To create a function, you need to create a name and add your parameters. For each parameter, you will need to select a data type. Then, you add your CQL code in the CQL Expression Editor below. The syntax for a function is:</p>
 				<pre class="reveal"><code><span class="keyword">define function</span> <span class="quote madlib">"Function Name"</span>(Arg1, Arg2, ...):
-				<span class="madlib">Your CQL code here...</span></code></pre>
+	<span class="madlib">Your CQL code here...</span></code></pre>
 
 				<p class="reveal">For my measure, I will need to extract the year from the measurement period.	This doesn't require a function as I'm only doing this once in my code but makes for a good example. The function takes a <code><span class="keyword">DateTime</span></code> as its only argument and returns the year as an <code><span class="keyword">Integer</span></code>.</p>
 				<pre class="reveal"><code><span class="keyword">define function</span> <span class="quote">"FromYear"</span>(MyDate <span class="keyword">DateTime</span>):
-		<span class="keyword">month from</span> <span class="quote">"MyDate"</span></code></pre>
+	<span class="keyword">month from</span> <span class="quote">"MyDate"</span></code></pre>
 			</div>
 		</div>
       </div>
@@ -374,16 +374,16 @@ pre {
 		<div class="item-wrapper">
 			<div class="item">
 		<h2 class="large reveal">Definitions</h2>
-	<p class="reveal">The definitions sections allow us to define expressions that can be referenced in our code. The syntax is:</p>
+	<p class="reveal">The definitions sections allow us to define expressions that can be referenced in our code. The syntax for a definition is:</p>
     <pre class="reveal"><code><span class="keyword">define</span> <span class="quote madlib">"Definition Name"</span>:
 	<span class="madlib">Your CQL code here...</span></code></pre>
     <p class="reveal">We need several definitions but will start with the initial population which includes individuals 6 months or older as of September 1st.</p>
 	<pre class="reveal"><code><span class="keyword">define</span> <span class="quote">"Initial Population"</span>:
 	<span class="keyword">AgeInMonthsAt</span>(<span class="keyword">start of</span> <span class="quote">"Flu Season"</span>)>= 6</code></pre>
-    <p class="reveal">The denominator is the same as the eligible population.</p>
+    <p class="reveal">For our measure, the denominator is the same as the eligible population.</p>
 	<pre class="reveal"><code><span class="keyword">define</span> <span class="quote">"Denominator"</span>:
 	<span class="quote">"Initial Population"</span></code></pre>
-	<p class="reveal">The exclusions include individuals with Guillain-Barré syndrome or an allergy to the influenza vaccine. Using a query, we retrieve the resources (e.g., <code>[<span class="quote">"Condition"</span>]</code>) and filter using the value sets that we previously defined (e.g., <code>[<span class="quote">"Condition"</span>: <span class="quote">"Guillain Barre Syndrome"</span>]</code>). For the <code><span class="quote">AllergyIntollerance</span></code> resource, we need to further limit the results to those with the appropriate statuses. We use an alias for the result and </span class="keyword">where</span> clause to further filter the result to only those that meet the condition. The <code><span class="keyword">union</span></code> operator is used to append the results of the retrieve operations and then the <code><span class="keyword">exists</span></code> operator tests whether the list contains any elements.</p>
+	<p class="reveal">The exclusions include individuals with Guillain-Barré syndrome or an allergy to the influenza vaccine. Using a query, we retrieve the resources (e.g., <code>[<span class="quote">"Condition"</span>]</code>) and filter using the value sets that we previously defined (e.g., <code>[<span class="quote">"Condition"</span>: <span class="quote">"Guillain Barre Syndrome"</span>]</code>). For the <code><span class="quote">AllergyIntollerance</span></code> resource, we need to further limit the results to those with the appropriate statuses. We use an alias for the result and a </span class="keyword">where</span> clause to further filter the result to only those that meet the condition. The <code><span class="keyword">union</span></code> operator is used to append the results of the retrieve operations and then the <code><span class="keyword">exists</span></code> operator tests whether the list contains any elements.</p>
 	
 	<!--Queries use the following syntax:</p>
 	<pre class="reveal"><code>&lt;primary-source&gt; &lt;alias&gt;
@@ -453,7 +453,7 @@ pre {
 			<div class="item-wrapper">
 				<div class="item">
 					<p class="reveal">Our work is not done quite yet. Next, we need to go to the population workspace and select the appropriate definition for each population (e.g., initial populations, denominators, denominator exclusions, and numerators). We've made this easy by naming our definitions to align with these populations.</>
-					<p class="reveal">From the measure packager, we add these populations to the package grouping and save. Then, at the bottom of that page, we can create the <a href="fluvax-v0-0-006-FHIR-4-0-1.zip">measure package</a> and export it. This zip file can be loaded into Bonnie for testing.</>
+					<p class="reveal">From the measure packager, we add these populations to the package grouping and save. Then, at the bottom of that page, we can create the <a href="fluvax-v0-0-006-FHIR-4-0-1.zip">measure package</a> and export it. This zip file can be loaded into Bonnie for testing. More to come on that.</>
 				</div>
 			</div>		
 		</div>
