--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ body {
   margin-right: auto;
 }*/
 .spacer {
-  margin-bottom: 30px;
+  margin-bottom: 150px;
 }
 /*.ipsGrid {
   display: inline-block;
@@ -179,8 +179,9 @@ pre {
   <div class="row spacer">
     <div class="side image reveal reveal_left">
       <div class="item-wrapper">
-        <div class="item">
-          <iframe src="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/vaccine-finder-widget_1.html" scrolling="no" height="520" frameborder="0" width="280" title="Vaccine Finder Widget" style="overflow: hidden; frameborder="0"><!– Vaccine Finder Widget !–> </iframe>
+        <div class="item card">
+			<img src="https://www.cdc.gov/flu/images/freeresources/animated-fight-flu-arm-flex.gif" style="width: 500px;"></img>
+          <!--<iframe src="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/vaccine-finder-widget_1.html" scrolling="no" height="520" frameborder="0" width="280" title="Vaccine Finder Widget" style="overflow: hidden; frameborder="0"><!– Vaccine Finder Widget !–> </iframe>-->
         </div>
       </div>
 	</div>
