--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ pre {
 		</div>
     </div>
 	
-	<h1 class="header-section reveal center">Measure Authoring Tool</h2>
+	<h1 class="header reveal center">Measure Authoring Tool</h2>
 
     <div class="row spacer">
 	  <div class="side image reveal reveal_left">
