--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ pre {
 <div>
 <a href="https://www.linkedin.com/in/joel-montavon-704808a/" target="_blank"><img class="icon" width="60" height="60" src="https://content.linkedin.com/content/dam/me/brand/en-us/brand-home/logos/In-Blue-Logo.png.original.png" style="position: absolute; right: 80px; top: 10px;"></img></a>
 <a href="https://github.com/joelmontavon/flu-vax-cql" target="_blank"><img class="icon" width="80" height="80" src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" style="position: absolute; right: 0px; top: 0px;"></img></a></p>
-  <h1 class="header reveal center">CQL 101: Measure Authoring Tool</h1>
+  <h1 class="header reveal center">The Measure Authoring Tool Crash Course</h1>
   <div class="row spacer">
 	<div class="item-wrapper" style="width: 500px; align-content: center;">
 		<div class="item reveal">
@@ -222,7 +222,7 @@ pre {
 		</div>
     </div>
 	
-	<h1 class="header reveal center">Measure Authoring Tool</h2>
+	<h1 class="header reveal center">The Measure Authoring Tool</h2>
 
     <div class="row spacer">
 	  <div class="side image reveal reveal_left">
@@ -455,7 +455,7 @@ pre {
 				<div class="item">
 					<p class="reveal">Now, we can view all of our code in the CQL Library Editor but our work is not done quite yet.</p>
 					<p class="reveal">Next, we need to go to the population workspace and select the appropriate definition for each population (e.g., initial populations, denominators, denominator exclusions, and numerators). We've made this easy by naming our definitions to align with these populations.</>
-					<p class="reveal">From the measure packager, we add these populations to the package grouping and save. Then, at the bottom of that page, we can create the <a href="fluvax-v0-0-008-FHIR-4-0-1.zip">measure package</a> and export it. This zip file can be loaded into Bonnie for testing. More to come on that.</>
+					<p class="reveal">From the measure packager, we add these populations to the package grouping and save. Then, at the bottom of that page, we can create the <a href="fluvax-v0-0-008-FHIR-4-0-1.zip">measure package</a> and export it. This zip file can be loaded into <a href="https://bonnie-fhir.healthit.gov/">Bonnie</a> for testing. More to come on that.</>
 				</div>
 			</div>		
 		</div>
