--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
 <head>
 <style>
-/* Styles from the GreenSock website */
 body {
   font-weight: 300;
 }
@@ -14,48 +13,10 @@ body {
 .center {
   text-align: center;
 }
-/*.cInnerContent {
-  max-width: 1240px;
-  margin-left: auto;
-  margin-right: auto;
-}*/
+
 .spacer {
   margin-bottom: 150px;
 }
-/*.ipsGrid {
-  display: inline-block;
-  display: -ms-flexbox;
-  display: flex;
-  flex-wrap: wrap;
-}
-.ipsGrid::before, .ipsGrid::after {
-  display: table;
-  content: "";
-  line-height: 0;
-}
-.ipsGrid > [class*="ipsGrid_span"] {
-  display: block;
-  width: 100%;
-  min-height: 30px;
-  box-sizing: border-box;
-}
-.ipsGrid > .ipsGrid_span5 {
-  width: 40.42553191489362%;
-}
-.ipsGrid > .ipsGrid_span7 {
-  width: 57.44680851063829%;
-}
-.ipsGrid > [class*="ipsGrid_span"] {
-  float: left;
-  margin-left: 2%;
-}
-.ipsGrid > [class*="ipsGrid_span"]:first-child {
-  margin-left: 0;
-}
-.feature {
-  display: flex;
-  align-items: center;
-}*/
 
 .card {
   margin-bottom: 30px;
@@ -89,6 +50,11 @@ img {
 }
 </style>
 <style>
+.mat-section {
+	font-weight: bold;
+	font-style: italic;
+}
+
 pre {
 	padding: 10px;
     background: rgb(235, 235, 235);
@@ -235,9 +201,9 @@ pre {
       <div class="main">
 		<div class="item-wrapper">
 			<div class="item">
-				<p class="reveal">The first step is creating a new measure in the measure library. You will need to define a name for your measure, the data model (i.e., FHIR or QDM), a library name that will be created for your measure, and an abbreviated title. You will also need to specify whether higher or lower scores are better and if the measure is patient-based.</p>
-				<p>Once your measure has been created, it will take you to the measure details section in the measure composer. This section allows you to provide a lot of useful information for those that will be using your measure. The information that you entered will already be populated but there are a few additional details that you will need to enter before you can go any further. These include the measure steward, a brief description of the measure, and the measure type (e.g., structure, process, outcome). Of course, there is a lot more that you can do in this section but will not go into much detail.</p>
-				<p>Now that we've setup our measure, we can get to work in the CQL workspace.</p>
+				<p class="reveal">The first step is creating a new measure in the <span class="mat-section">Measure Library</span>. You will need to define a name for your measure, the data model (i.e., FHIR or QDM), a library name that will be created for your measure, and an abbreviated title. You will also need to specify whether higher or lower scores are better and if the measure is patient-based.</p>
+				<p>Once your measure has been created, it will take you to the <span class="mat-section">Measure Details</span> section in the <span class="mat-section">Measure Composer</span>. This section allows you to provide a lot of useful information for those that will be using your measure. The information that you entered will already be populated but there are a few additional details that you will need to enter before you can go any further. These include the measure steward, a brief description of the measure, and the measure type (e.g., structure, process, outcome). Of course, there is a lot more that you can do in this section but will not go into much detail.</p>
+				<p>Now that we've setup our measure, we can get to work in the <span class="mat-section">CQL Workspace</span>.</p>
 			</div>
 		</div>
 	  </div>
@@ -249,7 +215,7 @@ pre {
 		<div class="item-wrapper">
 			<div class="item">
 				<h2 class="large reveal">Includes</h2>
-				<p class="reveal">This section allows you to search for and add existing libraries to your code. You can create your own libaries to reuse value sets, codes, functions, etc. across measures.</p>
+				<p class="reveal">The <span class="mat-section">Includes</span> section allows you to search for and add existing libraries to your code. You can create your own libaries to reuse value sets, codes, functions, etc. across measures.</p>
 				<p class="reveal">Unfortunately, I don't know that there is any easy way to view all of the libraries available. It will not allow you to search for any empty string. However, it does appear to be convention to include FHIR in the library name.</p>
 				<p class="reveal">By selecting a value set from the available libraries, defining the alias, and hitting save, the tool will add some code with the following syntax:</p>
 				<pre class="reveal"><code><span class="keyword">include</span> <span class="quote madlib">Library Name</span> <span class="keyword">version</span> <span class="quote madlib">'X.X.XXX'</span> <span class="keyword">called</span> <span class="quote madlib">Alias</span></code></pre>
@@ -281,7 +247,7 @@ pre {
 		<div class="item-wrapper">
 			<div class="item">
 				<h2 class="large reveal">Value Sets</h2>
-				<p class="reveal">This section allows you to reference value sets from the <a href="https://vsac.nlm.nih.gov/welcome">Value Set Authority Center (VSAC)</a> in your measure. You need to sign into UMLS using an API key to add a value set to your code. You can sign in using the link at the top of the page. And, they provide simple instructions to find your API key if you don't already have it.</p>
+				<p class="reveal">The <span class="mat-section">Value Sets</span> section allows you to reference value sets from the <a href="https://vsac.nlm.nih.gov/welcome">Value Set Authority Center (VSAC)</a> in your measure. You need to sign into UMLS using an API key to add a value set to your code. You can sign in using the link at the top of the page. And, they provide simple instructions to find your API key if you don't already have it.</p>
 				<p class="reveal">To add a value set to your code, you first need to find the OID from the VSAC. Then, you enter that into the search form and retrieve the value set. The value set is not added to your code until you select apply. The tool will then add some code with the following syntax:</p>
 				<pre class="reveal"><code><span class="keyword">valueset</span> <span class="quote madlib">"Value Set Name"</span><span class="punct">:</span> <span class="quote madlib">'URL'</span></code></pre>
 				<p class="reveal">For the exclusions in my measure, I found a value sets for identifying individuals with Guillain-Barré syndrome including ICD-10 and SNOMED-CT codes and another for identifying individuals with an allergy to the influenza vaccine including SNOMED-CT codes. And, for the numerator, I found a value set to identify the influenza vaccine including CPT, CVX, HCPCS, ICD10PCS, RXNORM, and SNOMEDCT codes. The final code looks like this:</p>
@@ -298,7 +264,7 @@ pre {
 		<div class="item-wrapper">
 			<div class="item">
 				<h2 class="large reveal">Codes</h2>
-				<p class="reveal">This section allows you to reference specific codes from various terminologies. You need to sign into UMLS using an API key to add a value set to your code. You can sign in using the link at the top of the page. And, they provide simple instructions to find your API key if you don't already have it.</p>
+				<p class="reveal">The <span class="mat-section">Codes</span> section allows you to reference specific codes from various terminologies. As with the value sets, you need to sign into UMLS using an API key to add a value set to your code. You can sign in using the link at the top of the page. And, they provide simple instructions to find your API key if you don't already have it.</p>
 				<p class="reveal">To add a code, you first need to find the OID from the VSAC. Then, you enter that into the search form and retrieve the value set. The value set is not added to your code until you select apply. The tool will then add some code with the following syntax:</p>
 				<pre class="reveal"><code><span class="keyword">codesystem</span> <span class="quote madlib">"Code System"</span>: <span class="quote madlib">'URL'</span>
 <span class="keyword">code</span> <span class="quote madlib">"Code Set Name"</span><span class="punct">:</span> <span class="quote madlib">'Code'</span> <span class="keyword">from</span> <span class="quote madlib">"Code System"</span> <span class="keyword">display</span> <span class="quote madlib">'Display'</span></code></pre>
@@ -327,11 +293,11 @@ pre {
 		<div class="item-wrapper">
 			<div class="item">
 				<h2 class="large reveal">Parameters</h2>
-				<p class="reveal">This section allows you to provide the code with parameters to be used in your code and the measurement period is added by default. Parameters follow the following syntax:</p>
+				<p class="reveal">The <span class="mat-section">Parameters</span> section allows you to provide the code with parameters to be used in your code. Parameters follow the following syntax:</p>
 				<pre class="reveal"><code><span class="keyword">parameter</span> <span class="quote madlib">"Parameter Name"</span> <span class="keyword madlib">Data Type</span> [<span class="keyword">default</span> <span class="madlib">Default Value</span>]</code></pre>	
-				<p class="reveal"><i>Note that Bonnie only allows the measure period as a parameter.</i></p>
+				<p class="reveal">The measurement period is added by default.</p>
 				<pre class="reveal"><code><span class="keyword">parameter</span> <span class="quote">"Measurement Period"</span> <span class="keyword">Interval&lt;DateTime&gt;</span></code></pre>
-				<p class="reveal">This is the measurement period added by default.</p>
+				<p class="reveal"><i>Note that Bonnie only allows the measure period as a parameter.</i></p>
 		  </div>
 		</div>	
       </div>
@@ -342,7 +308,7 @@ pre {
 		<div class="item-wrapper">
 			<div class="item">
 				<h2 class="large reveal">Functions</h2>
-				<p class="reveal">I've skipped over the Definitions section for now. With a function, you provide one or more inputs and get an output. This is a way to simplify your code if you need to perform the same calculation again and again.</p>
+				<p class="reveal">I've skipped over the <span class="mat-section">Definitions</span> to the <span class="mat-section">Functions</span> section. With a function, you provide one or more inputs and get an output. This is a way to simplify your code if you need to perform the same calculation again and again.</p>
 				<p class="reveal">To create a function, you need to create a name and add your parameters. For each parameter, you will need to select a data type. Then, you add your CQL code in the CQL Expression Editor below. The syntax for a function is:</p>
 				<pre class="reveal"><code><span class="keyword">define function</span> <span class="quote madlib">"Function Name"</span>(Arg1, Arg2, ...):
 	<span class="madlib">Your CQL code here...</span></code></pre>
@@ -375,10 +341,10 @@ pre {
 		<div class="item-wrapper">
 			<div class="item">
 		<h2 class="large reveal">Definitions</h2>
-	<p class="reveal">The definitions sections allow us to define expressions that can be referenced in our code. The syntax for a definition is:</p>
+	<p class="reveal">The <span class="mat-section">Definitions</span> sections allow us to define expressions that can be referenced in our code. The syntax for a definition is:</p>
     <pre class="reveal"><code><span class="keyword">define</span> <span class="quote madlib">"Definition Name"</span>:
 	<span class="madlib">Your CQL code here...</span></code></pre>
-    <p class="reveal">We need several definitions but will start with the initial population which includes individuals 6 months or older as of September 1st.</p>
+    <p class="reveal">We need several definitions but will start with the initial population which includes individuals 6 months or older as of September 1st. CQL has some very useful date operators. <code><span class="keyword">Start of</span></code> and <code><span class="keyword">End of</span></code> return the starting or ending <code><span class="keyword">DateTime</span></code> from the <code><span class="keyword">Interval&lt;DateTime&gt;</span></code>.</p>
 	<pre class="reveal"><code><span class="keyword">define</span> <span class="quote">"Initial Population"</span>:
 	<span class="keyword">AgeInMonthsAt</span>(<span class="keyword">start of</span> <span class="quote">"Flu Season"</span>)>= 6</code></pre>
     <p class="reveal">For our measure, the denominator is the same as the eligible population.</p>
@@ -425,7 +391,7 @@ pre {
 	)</code></pre>
 	
 	<p class="reveal">The last thing we need to do is define the numerator which includes individuals that recieved &ge; 1 dose of the influenze vaccine. This may be captured via more than one resource (e.g., <code><span class="quote">MedicationAdministration</span></code>, <code><span class="quote">MedicationDispense</span></code>, <code><span class="quote">Encounter</span></code>, <code><span class="quote">Immunization</span></code>).</p>
-	<p class="reveal">CQL has some very useful date operators. <code><span class="keyword">Start of</span></code> and <code><span class="keyword">End of</span></code> return the starting or ending <code><span class="keyword">DateTime</span></code> from the <code><span class="keyword">Interval&lt;DateTime&gt;</span></code>.</p>
+
 	<pre class="reveal"><code><span class="keyword">define</span> <span class="quote">"Numerator"</span>:
 	<span class="keyword">exists</span> ((([<span class="quote">"MedicationAdministration"</span>: <span class="quote">"Influenza Virus Vaccine and Vaccination"</span>])admin
 			where admin.effective in "Flu Season"
@@ -453,9 +419,9 @@ pre {
 		<div class="main">
 			<div class="item-wrapper">
 				<div class="item">
-					<p class="reveal">Now, we can view all of our code in the CQL Library Editor but our work is not done quite yet.</p>
-					<p class="reveal">Next, we need to go to the population workspace and select the appropriate definition for each population (e.g., initial populations, denominators, denominator exclusions, and numerators). We've made this easy by naming our definitions to align with these populations.</>
-					<p class="reveal">From the measure packager, we add these populations to the package grouping and save. Then, at the bottom of that page, we can create the <a href="fluvax-v0-0-008-FHIR-4-0-1.zip">measure package</a> and export it. This zip file can be loaded into <a href="https://bonnie-fhir.healthit.gov/">Bonnie</a> for testing. More to come on that.</>
+					<p class="reveal">Now, we can view all of our code in the <span class="mat-section">CQL Library Editor</span> but our work is not done quite yet.</p>
+					<p class="reveal">Next, we need to go to the <span class="mat-section">Population Workspace</span> and select the appropriate definition for each population (e.g., initial populations, denominators, denominator exclusions, and numerators). We've made this easy by naming our definitions to align with these populations.</>
+					<p class="reveal">From the <span class="mat-section">Measure Packager</span>, we add these populations to the package grouping and save. Then, at the bottom of that page, we can create the <a href="fluvax-v0-0-008-FHIR-4-0-1.zip">measure package</a> and export it. This zip file can be loaded into <a href="https://bonnie-fhir.healthit.gov/">Bonnie</a> for testing. More to come on that.</>
 				</div>
 			</div>		
 		</div>
